--- a/index.html
+++ b/index.html
@@ -3,10 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width	, initial-scale=1.0">
+  <meta name="description" content="Dies ist meine erste Website">
+  <meta name="keywords" content="HTML, CSS, erste Website, Homepage">
+  <meta name="author" content="Benedikt Lamberty">
+  <title>Mission Grün</title>
+
+  <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/main-index.css">
+  <link rel="stylesheet" href="styles/header-top.css">
+  <link rel="stylesheet" href="styles/atmedia.css">
+  <link rel="stylesheet" href="styles/vars.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+  <!--Icons-->
+  <script src="https://kit.fontawesome.com/e831cd4cfa.js" crossorigin="anonymous"></script>
 </head>
-<body>
-  lökjasdlökfjlökjlöaksdfjlökj
+<body class="body">
+
+  <header>
+    <!--Vertikal--------------------------------------------------------------------------------------->
+    <div class="sidebar">
+      <img src="bilder/platzhalter.png" alt="" class="logo-sidebar">
+      <nav class="einteilung-navbar">
+        <div class="sidebar-section">
+          <div class="sidebar-subsec-active">
+            <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
+            <div class="nav-name">Start</div>
+          </div>
+          <a href="projekte.html">
+            <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
+              <div class="nav-name">Über uns</div>
+            </div>
+          </a>
+          <a href="projekte.html">
+            <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
+              <div class="nav-name">Aktuelles</div>
+            </div>
+          </a>
+          <a href="projekte.html">
+            <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
+              <div class="nav-name">Projekte</div>
+            </div>
+          </a>
+          <a href="projekte.html">
+            <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-solid fa-newspaper"></i></div>
+              <div class="nav-name">Berichte</div>
+            </div>
+          </a>
+        </div>
+        <div class="sidebar-section">
+          <a href="https://www.youtube.com/">
+            <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
+              <div class="nav-name">YouTube</div>
+            </div>
+          </a>
+        </div>
+        <div class="sidebar-section">
+          <a href="https://www.youtube.com/">
+            <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-solid fa-paper-plane"></i></div>
+              <div class="nav-name">Kontakt</div>
+            </div>
+          </a>
+        </div>
+      </nav>
+    </div>
+    <!--Horizontal----------------------------------------------------------------------------------------->
+    <div class="headbar">
+      <nav class="header-nav">
+        <img src="bilder/platzhalter.png" alt="" class="logo-headbar">
+        <div class="change-site-active">
+          <div class="header-link-active">
+            <div class="header-change-icon"><i class="fa-solid fa-house"></i></div>
+            <div class="header-change-text">Start</div>
+          </div>
+        </div>
+        <div class="change-site">
+          <a href="projekte.html" class="header-link">
+            <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
+            <div class="header-change-text">Über uns</div>
+          </a>
+        </div>
+        <div class="change-site">
+          <a href="projekte.html" class="header-link">
+            <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
+            <div class="header-change-text">Aktuelles</div>
+          </a>
+        </div>
+        <div class="change-site">
+          <a href="projekte.html" class="header-link">
+            <div class="header-change-icon"><i class="fa-solid fa-book"></i></div>
+            <div class="header-change-text">Projekte</div>
+          </a>
+        </div>
+        <div class="change-site">
+          <a href="projekte.html" class="header-link">
+            <div class="header-change-icon"><i class="fa-solid fa-newspaper"></i></div>
+            <div class="header-change-text">Berichte</div>
+          </a>
+        </div>
+        <div class="header-socials">
+          <a href="https://www.youtube.com/" class="header-social-link">
+            <i class="fa-brands fa-youtube"></i>
+          </a>
+          <a href="" class="header-social-link">
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+        </div>
+        <div class="change-site header-menue">
+          <a href="menue.html" class="header-link menue-button">
+            <div class="header-change-icon"><i class="fa-solid fa-bars"></i></div>
+            <div class="header-change-text">Menü</div>
+          </a>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+<!--Main---------------------------------------------------------------------------------------------------->
+<!--Main---------------------------------------------------------------------------------------------------->
+  <main>
+    <h1>Willkommen auf meiner Homepage!</h1>
+
+    <div class="warning">
+      Diese Seite ist keine professionelle Internetseite, sondern nur ein kleines Projekt :&#41;
+    </div>
+
+    
+    <h2> Wer bin ich?</h2>
+    <p class="pers-info">
+      Ich bin Benedikt Lamberty und ich habe mir mal gedacht: "Warum hast du
+      eigentlich keine eigene Website?" So ist das hier entstanden. <br/>
+
+    </p>
+  </main>
+
+
+
+
+
+
 </body>
 </html>
+ 
