--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+  <meta name="google-site-verification" content="Nbk1qLxNk5usnGfv20JAFXjucxigF3vqmXJC2nLawCw" />
+
   <!--Icons-->
   <script src="https://kit.fontawesome.com/e831cd4cfa.js" crossorigin="anonymous"></script>
 </head>
