--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
               <div class="nav-name">YouTube</div>
             </div>
           </a>
+          <a href="https://www.youtube.com/">
+            <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></div>
+              <div class="nav-name">Links</div>
+            </div>
+          </a>
         </div>
         <div class="sidebar-section">
           <a href="https://www.youtube.com/">
@@ -119,6 +125,9 @@
             <i class="fa-brands fa-youtube"></i>
           </a>
           <a href="" class="header-social-link">
+            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </a>
+          <a href="" class="header-social-link">
             <i class="fa-solid fa-envelope"></i>
           </a>
         </div>
@@ -135,19 +144,53 @@
 <!--Main---------------------------------------------------------------------------------------------------->
 <!--Main---------------------------------------------------------------------------------------------------->
   <main>
-    <h1>Willkommen auf meiner Homepage!</h1>
+    <h1>Willkommen bei Mission Grün!</h1>
 
     <div class="warning">
       Diese Seite ist keine professionelle Internetseite, sondern nur ein kleines Projekt :&#41;
     </div>
 
     
-    <h2> Wer bin ich?</h2>
+    <h2>Wer sind wir?</h2>
     <p class="pers-info">
-      Ich bin Benedikt Lamberty und ich habe mir mal gedacht: "Warum hast du
-      eigentlich keine eigene Website?" So ist das hier entstanden. <br/>
-
+      Wir sind eine Kinder- und Jugendgruppe im Pastoralen Raum Bad-Neuenahr Ahrweiler,
+      die sich für Natur- und Artenschutz einsetzt. Wenn Sie näheres über uns wissen wolle,
+      finden sie <a href="">hier</a> mehr Informationen.
     </p>
+
+    <h2>Aktuelle Veranstaltungen</h2>
+    <div class="preview-home-akt">
+      <div><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div>
+        <h3>Kräuterpfannkucken Backen mit Elisa</h3>
+        <div class="date">01.01.2050 &#183; 15:30 Uhr &#183; Auf dem Mond</div>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </p>
+        <button class="normal-button">
+          <i class="fa-solid fa-circle-info"></i> mehr Infos
+        </button>
+      </div>
+    </div>
+    <div class="preview-home-akt">
+      <div>
+        <h3>Vöglewanderung</h3>
+        <div class="date">02.02.2090 &#183; 15:30 Uhr &#183; Im Wald</div>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </p>
+        <button class="normal-button">
+          <i class="fa-solid fa-circle-info"></i> mehr Infos
+        </button>
+      </div>
+    </div>
+    <div class="preview-home-akt">
+      <div>
+        <button class="normal-button">
+          <i class="fa-solid fa-arrow-right-from-bracket"></i> Weitere Aktionen
+        </button>
+      </div>
+    </div>
   </main>
 
 
