--- a/menue.html
+++ b/menue.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Dies ist meine erste Website">
   <meta name="keywords" content="HTML, CSS, erste Website, Homepage">
   <meta name="author" content="Benedikt Lamberty">
-  <title>Mission Grün</title>
+  <title>Menü | Mission Grün</title>
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
@@ -53,6 +53,7 @@
       </ul>
       <ul class="menue-section menue-border">
         <li><a href=""><div><i class="fa-brands fa-youtube"></i></div><div>YouTube</div></a></li>
+        <li><a href=""><div><i class="fa-solid fa-arrow-up-right-from-square"></i></div><div>Externe Links</div></a></li>
       </ul>
       <ul class="menue-section">
         <li><a href=""><div><i class="fa-solid fa-paper-plane"></i></div><div>Kontakt</div></a></li>
