about page layout

--- a/menue.html
+++ b/menue.html
@@ -46,7 +46,7 @@
     <nav>
       <ul class="menue-section menue-border">
         <li><a href="index.html"><div><i class="fa-solid fa-house"></i></div><div>Start</div></a></li>
-        <li><a href=""><div><i class="fa-solid fa-people-group"></i></div><div>Über uns</div></a></li>
+        <li><a href="about.html"><div><i class="fa-solid fa-people-group"></i></div><div>Über uns</div></a></li>
         <li><a href=""><div><i class="fa-solid fa-calendar-days"></i></div><div>Aktuelles</div></a></li>
         <li><a href=""><div><i class="fa-solid fa-book"></i></div><div>Projekte</div></a></li>
         <li><a href=""><div><i class="fa-solid fa-newspaper"></i></div><div>Berichte</div></a></li>
