--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Dies ist meine erste Website">
   <meta name="keywords" content="HTML, CSS, erste Website, Homepage">
   <meta name="author" content="Benedikt Lamberty">
-  <title>Mission Grün</title>
+  <title>Über uns | Mission Grün</title>
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="styles/header-top.css">
   <link rel="stylesheet" href="styles/atmedia.css">
   <link rel="stylesheet" href="styles/vars.css">
+  <link rel="stylesheet" href="styles/main-about.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,16 +34,17 @@
       <img src="bilder/platzhalter.png" alt="" class="logo-sidebar">
       <nav class="einteilung-navbar">
         <div class="sidebar-section">
-          <div class="sidebar-subsec-active">
-            <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
-            <div class="nav-name">Start</div>
-          </div>
-          <a href="about.html">
+          <a href="index.html">
             <div class="sidebar-subsec">
-              <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
-              <div class="nav-name">Über uns</div>
+              <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
+              <div class="nav-name">Start</div>
             </div>
           </a>
+          <div class="sidebar-subsec-active">
+            <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
+            <div class="nav-name">Über uns</div>
+          </div>
+
           <a href="projekte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
@@ -90,17 +92,17 @@
     <div class="headbar">
       <nav class="header-nav">
         <img src="bilder/platzhalter.png" alt="" class="logo-headbar">
-        <div class="change-site-active">
-          <div class="header-link-active">
+        <div class="change-site">
+          <a href="index.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-house"></i></div>
             <div class="header-change-text">Start</div>
-          </div>
+          </a>
         </div>
-        <div class="change-site">
-          <a href="about.html" class="header-link">
+        <div class="change-site-active">
+          <div class="header-link-active">
             <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
             <div class="header-change-text">Über uns</div>
-          </a>
+          </div>
         </div>
         <div class="change-site">
           <a href="projekte.html" class="header-link">
@@ -144,53 +146,14 @@
 <!--Main---------------------------------------------------------------------------------------------------->
 <!--Main---------------------------------------------------------------------------------------------------->
   <main>
-    <h1>Willkommen bei Mission Grün!</h1>
+    <h1>Mission Grün &#8212; Wer sind wir?</h1>
 
-    <div class="warning">
-      Diese Seite ist keine professionelle Internetseite, sondern nur ein kleines Projekt :&#41;
-    </div>
+    <img src="bilder/gruppenfoto-platzhalter.webp" alt="" class="about-foto1">
 
-    
-    <h2>Wer sind wir?</h2>
-    <p class="pers-info">
-      Wir sind eine Kinder- und Jugendgruppe im Pastoralen Raum Bad-Neuenahr Ahrweiler,
-      die sich für Natur- und Artenschutz einsetzt. Wenn Sie näheres über uns wissen wolle,
-      finden sie <a href="about.html">hier</a> mehr Informationen.
-    </p>
+    <h2>laksdjfklöjasdökljf</h2>
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
 
-    <h2>Aktuelle Veranstaltungen</h2>
-    <div class="preview-home-akt">
-      <div><img src="bilder/bild-platzhalter.png" alt=""></div>
-      <div>
-        <h3>Kräuterpfannkucken Backen mit Elisa</h3>
-        <div class="date">01.01.2050 &#183; 15:30 Uhr &#183; Auf dem Mond</div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
-        <button class="normal-button">
-          <i class="fa-solid fa-circle-info"></i> mehr Infos
-        </button>
-      </div>
-    </div>
-    <div class="preview-home-akt">
-      <div>
-        <h3>Vöglewanderung</h3>
-        <div class="date">02.02.2090 &#183; 15:30 Uhr &#183; Im Wald</div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
-        <button class="normal-button">
-          <i class="fa-solid fa-circle-info"></i> mehr Infos
-        </button>
-      </div>
-    </div>
-    <div class="preview-home-akt">
-      <div>
-        <button class="normal-button">
-          <i class="fa-solid fa-arrow-right-from-bracket"></i> Weitere Aktionen
-        </button>
-      </div>
-    </div>
+      Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,</p>
   </main>
 
 
