--- a/aktuelles.html
+++ b/aktuelles.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Dies ist meine erste Website">
   <meta name="keywords" content="HTML, CSS, erste Website, Homepage">
   <meta name="author" content="Benedikt Lamberty">
-  <title>Über uns | Mission Grün</title>
+  <title>Aktuelles | Mission Grün</title>
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="styles/header-top.css">
   <link rel="stylesheet" href="styles/atmedia.css">
   <link rel="stylesheet" href="styles/vars.css">
-  <link rel="stylesheet" href="styles/main-about.css">
+  <link rel="stylesheet" href="styles/main-aktuelles.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,21 +36,22 @@
         <div class="sidebar-section">
           <a href="index.html">
             <div class="sidebar-subsec">
-              <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
-              <div class="nav-name">Start</div>
+                <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
+                <div class="nav-name">Start</div>
             </div>
           </a>
-          <div class="sidebar-subsec-active">
-            <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
-            <div class="nav-name">Über uns</div>
-          </div>
-
-          <a href="aktuelles.html">
+          <a href="about.html">
             <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
+              <div class="nav-name">Über uns</div>
+            </div>
+          </a>
+
+            <div class="sidebar-subsec-active">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
             </div>
-          </a>
+
           <a href="projekte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
@@ -79,7 +80,7 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="kontakt.html">
+          <a href="kontakte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-paper-plane"></i></div>
               <div class="nav-name">Kontakt</div>
@@ -94,21 +95,23 @@
         <img src="bilder/platzhalter.png" alt="" class="logo-headbar">
         <div class="change-site">
           <a href="index.html" class="header-link">
-            <div class="header-change-icon"><i class="fa-solid fa-house"></i></div>
-            <div class="header-change-text">Start</div>
+            <div class="header-link">
+              <div class="header-change-icon"><i class="fa-solid fa-house"></i></div>
+              <div class="header-change-text">Start</div>
+            </div>
+          </a>
+        </div>
+        <div class="change-site">
+          <a href="about.html" class="header-link">
+            <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
+            <div class="header-change-text">Über uns</div>
           </a>
         </div>
         <div class="change-site-active">
           <div class="header-link-active">
-            <div class="header-change-icon"><i class="fa-solid fa-people-group"></i></div>
-            <div class="header-change-text">Über uns</div>
-          </div>
-        </div>
-        <div class="change-site">
-          <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
-          </a>
+          </div>
         </div>
         <div class="change-site">
           <a href="projekte.html" class="header-link">
@@ -146,15 +149,7 @@
 <!--Main---------------------------------------------------------------------------------------------------->
 <!--Main---------------------------------------------------------------------------------------------------->
   <main>
-    <h1>Mission Grün &#8212; Wer sind wir?</h1>
-
-    <img src="bilder/gruppenfoto-platzhalter.webp" alt="" class="about-foto1">
-
-    <h2>laksdjfklöjasdökljf</h2>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
-
-      Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,
-    </p>
+    <h1>Aktuelles und Termine</h1>
   </main>
 
 
