--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="nav-name">Über uns</div>
             </div>
           </a>
-          <a href="projekte.html">
+          <a href="aktuelles.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
@@ -55,7 +55,7 @@
               <div class="nav-name">Projekte</div>
             </div>
           </a>
-          <a href="projekte.html">
+          <a href="berichte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-newspaper"></i></div>
               <div class="nav-name">Berichte</div>
@@ -69,7 +69,7 @@
               <div class="nav-name">YouTube</div>
             </div>
           </a>
-          <a href="https://www.youtube.com/">
+          <a href="links.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></div>
               <div class="nav-name">Links</div>
@@ -77,7 +77,7 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="https://www.youtube.com/">
+          <a href="kontakt.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-paper-plane"></i></div>
               <div class="nav-name">Kontakt</div>
@@ -103,7 +103,7 @@
           </a>
         </div>
         <div class="change-site">
-          <a href="projekte.html" class="header-link">
+          <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
           </a>
@@ -115,7 +115,7 @@
           </a>
         </div>
         <div class="change-site">
-          <a href="projekte.html" class="header-link">
+          <a href="berichte.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-newspaper"></i></div>
             <div class="header-change-text">Berichte</div>
           </a>
@@ -124,10 +124,10 @@
           <a href="https://www.youtube.com/" class="header-social-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
-          <a href="" class="header-social-link">
+          <a href="links.html" class="header-social-link">
             <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </a>
-          <a href="" class="header-social-link">
+          <a href="kontakt.html" class="header-social-link">
             <i class="fa-solid fa-envelope"></i>
           </a>
         </div>
