--- a/menue.html
+++ b/menue.html
@@ -31,7 +31,7 @@
       <nav class="header-nav">
         <img src="bilder/platzhalter.png" alt="" class="logo-headbar">
         <div class="header-menue change-site">
-          <div id="go-back" class="header-link">
+          <div id="go-back" class="header-link go-back">
             <div class="header-change-icon"><i class="fa-solid fa-xmark"></i></i></div>
             <div class="header-change-text">Zurück</div>
           </div>
