--- a/projekte.html
+++ b/projekte.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Dies ist meine erste Website">
   <meta name="keywords" content="HTML, CSS, erste Website, Homepage">
   <meta name="author" content="Benedikt Lamberty">
-  <title>Aktuelles | Mission Grün</title>
+  <title>Projekte | Mission Grün</title>
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="styles/header-top.css">
   <link rel="stylesheet" href="styles/atmedia.css">
   <link rel="stylesheet" href="styles/vars.css">
-  <link rel="stylesheet" href="styles/main-aktuelles.css">
+  <link rel="stylesheet" href="styles/template-thumbnail.css">
+  <link rel="stylesheet" href="styles/tags.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,8 +37,8 @@
         <div class="sidebar-section">
           <a href="index.html">
             <div class="sidebar-subsec">
-                <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
-                <div class="nav-name">Start</div>
+              <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
+              <div class="nav-name">Start</div>
             </div>
           </a>
           <a href="about.html">
@@ -46,18 +47,18 @@
               <div class="nav-name">Über uns</div>
             </div>
           </a>
-
-            <div class="sidebar-subsec-active">
+          <a href="aktuelles.html">
+            <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-calendar-days"></i></div>
               <div class="nav-name">Aktuelles</div>
             </div>
-
-          <a href="projekte.html">
-            <div class="sidebar-subsec">
+          </a>
+          
+            <div class="sidebar-subsec-active">
               <div class="nav-icon"><i class="fa-solid fa-book"></i></div>
               <div class="nav-name">Projekte</div>
             </div>
-          </a>
+          
           <a href="berichte.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-newspaper"></i></div>
@@ -80,7 +81,7 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="kontakte.html">
+          <a href="kontakt.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-paper-plane"></i></div>
               <div class="nav-name">Kontakt</div>
@@ -95,10 +96,8 @@
         <img src="bilder/platzhalter.png" alt="" class="logo-headbar">
         <div class="change-site">
           <a href="index.html" class="header-link">
-            <div class="header-link">
-              <div class="header-change-icon"><i class="fa-solid fa-house"></i></div>
-              <div class="header-change-text">Start</div>
-            </div>
+            <div class="header-change-icon"><i class="fa-solid fa-house"></i></div>
+            <div class="header-change-text">Start</div>
           </a>
         </div>
         <div class="change-site">
@@ -107,17 +106,17 @@
             <div class="header-change-text">Über uns</div>
           </a>
         </div>
-        <div class="change-site-active">
-          <div class="header-link-active">
+        <div class="change-site">
+          <a href="aktuelles.html" class="header-link">
             <div class="header-change-icon"><i class="fa-solid fa-calendar-days"></i></div>
             <div class="header-change-text">Aktuelles</div>
-          </div>
+          </a>
         </div>
-        <div class="change-site">
-          <a href="projekte.html" class="header-link">
+        <div class="change-site-active">
+          <div class="header-link-active">
             <div class="header-change-icon"><i class="fa-solid fa-book"></i></div>
             <div class="header-change-text">Projekte</div>
-          </a>
+          </div>
         </div>
         <div class="change-site">
           <a href="berichte.html" class="header-link">
@@ -149,32 +148,60 @@
 <!--Main---------------------------------------------------------------------------------------------------->
 <!--Main---------------------------------------------------------------------------------------------------->
   <main>
-    <h1>Aktuelles und Termine</h1>
+    <h1>Unsere Projekte</h1>
 
-    <div class="preview-home-akt">
-      <div><img src="bilder/bild-platzhalter.png" alt=""></div>
-      <div>
-        <h3>Kräuterpfannkucken Backen mit Elisa</h3>
-        <div class="date">01.01.2050 &#183; 15:30 Uhr &#183; Auf dem Mond</div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    <div class="projects-grid">
+
+      <div class="project-block">
+        <div class="proj-video-container">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/g4FovhkD6f0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <h2 class="proj-title">Video-Projekt 1</h2>
+        <div class="proj-author-date">
+          <div class="proj-side-info">Benedikt Lamberty</div>
+          <div class="proj-side-info">April 2023</div>
+        </div>
+        <div class="proj-tags">
+          <nobr class="proj-tag"><span class="tag-flora"><i class="fa-solid fa-circle"></i></span> Flora</nobr>
+          <nobr class="proj-tag"><span class="tag-fauna"><i class="fa-solid fa-circle"></i></span> Fauna</nobr>
+          <nobr class="proj-tag"><span class="tag-artenschutz"><i class="fa-solid fa-circle"></i></span> Artenschutz</nobr>
+        </div>
+        <p class="proj-abstract">
+          Zusammenfassung Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
         </p>
-        <button class="normal-button">
-          <i class="fa-solid fa-circle-info"></i> mehr Infos
-        </button>
+        <div class="proj-link">
+          <a href="https://www.youtube.com/watch?v=g4FovhkD6f0" target="_blank">
+            <button class="normal-button">
+              <i class="fa-brands fa-youtube"></i> YouTube
+            </button>
+          </a>
+        </div>
       </div>
-    </div>
-    <div class="preview-home-akt">
-      <div>
-        <h3>Vöglewanderung</h3>
-        <div class="date">02.02.2090 &#183; 15:30 Uhr &#183; Im Wald</div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+
+      <div class="project-block">
+        <img class="proj-thumbnail" src="bilder/bild-platzhalter.png" alt="">
+        <h2 class="proj-title">Artikel 1</h2>
+        <div class="proj-author-date">
+          <div class="proj-side-info">Benedikt Lamberty</div>
+          <div class="proj-side-info">April 2023</div>
+        </div>
+        <div class="proj-tags">
+          <nobr class="proj-tag"><span class="tag-flora"><i class="fa-solid fa-circle"></i></span> Flora</nobr>
+          <nobr class="proj-tag"><span class="tag-fauna"><i class="fa-solid fa-circle"></i></span> Fauna</nobr>
+          <nobr class="proj-tag"><span class="tag-artenschutz"><i class="fa-solid fa-circle"></i></span> Artenschutz</nobr>
+        </div>
+        <p class="proj-abstract">
+          Zusammenfassung Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
         </p>
-        <button class="normal-button">
-          <i class="fa-solid fa-circle-info"></i> mehr Infos
-        </button>
+        <div class="proj-link">
+          <a href="docs/1070_84_1.PDF" target="_blank">
+            <button class="normal-button">
+              <i class="fa-solid fa-file-pdf"></i> Artikel
+            </button>
+          </a>
+        </div>
       </div>
+
     </div>
   </main>
 
