links und kontakt

--- a/kontakt.html
+++ b/kontakt.html
@@ -7,14 +7,15 @@
   <meta name="description" content="Dies ist meine erste Website">
   <meta name="keywords" content="HTML, CSS, erste Website, Homepage">
   <meta name="author" content="Benedikt Lamberty">
-  <title>Mission Grün</title>
+  <title>Kontakt | Mission Grün</title>
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
-  <link rel="stylesheet" href="styles/main-index.css">
+  <link rel="stylesheet" href="styles/main-links.css">
   <link rel="stylesheet" href="styles/header-top.css">
   <link rel="stylesheet" href="styles/atmedia.css">
   <link rel="stylesheet" href="styles/vars.css">
+  <link rel="stylesheet" href="styles/main-kontakt.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,10 +34,12 @@
       <img src="bilder/platzhalter.png" alt="" class="logo-sidebar">
       <nav class="einteilung-navbar">
         <div class="sidebar-section">
-          <div class="sidebar-subsec-active">
-            <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
-            <div class="nav-name">Start</div>
-          </div>
+          <a href="index.html">
+            <div class="sidebar-subsec">
+              <div class="nav-icon"><i class="fa-solid fa-house"></i></div>
+              <div class="nav-name">Start</div>
+            </div>
+          </a>
           <a href="about.html">
             <div class="sidebar-subsec">
               <div class="nav-icon"><i class="fa-solid fa-people-group"></i></div>
@@ -77,11 +80,11 @@
           </a>
         </div>
         <div class="sidebar-section">
-          <a href="kontakt.html">
-            <div class="sidebar-subsec">
+
+            <div class="sidebar-subsec-active">
               <div class="nav-icon"><i class="fa-solid fa-paper-plane"></i></div>
               <div class="nav-name">Kontakt</div>
-            </div>
+
           </a>
         </div>
       </nav>
@@ -127,9 +130,9 @@
           <a href="links.html" class="header-social-link">
             <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </a>
-          <a href="kontakt.html" class="header-social-link">
+          <div href="kontakt.html" class="header-social-link-active">
             <i class="fa-solid fa-envelope"></i>
-          </a>
+          </div>
         </div>
         <div class="change-site header-menue">
           <a href="menue.html" class="header-link menue-button">
@@ -144,53 +147,47 @@
 <!--Main---------------------------------------------------------------------------------------------------->
 <!--Main---------------------------------------------------------------------------------------------------->
   <main>
-    <h1>Willkommen bei Mission Grün!</h1>
+    <h1>Kontakt</h1>
 
-    <div class="warning">
-      Diese Seite ist keine professionelle Internetseite, sondern nur ein kleines Projekt :&#41;
+    <h2>Mission Grün Leitung</h2>
+
+    <div class="preview-home-akt">
+      <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div>
+        <h3>Markus Hartmann</h3>
+
+        <p>
+          Graf-Blankerd-Straße 12-22 </br>
+          53501 Grafschaft </br>
+          Tel. 0171-1827107 </br>
+          <a href="mailto:markus.hartmann@bistum-trier.de"><i class="fa-solid fa-envelope"></i> markus.hartmann@bistum-trier.de</a>
+        </p>
+      </div>
+    </div>
+
+    <h2>Website</h2>
+    <div class="preview-home-akt">
+      <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
+      <div>
+        <h3>Benedikt Lamberty</h3>
+
+        <div class="warning">
+          <b>Wichtig:</b></br>
+          Ich bin ein Jugendlicher, der diese Internetseite ehrenamtlich in seiner Freizeit betreut, und kein Profi.
+          Wenn Ihnen technische Fehler auffallen, können Sie gerne eine Mail an mich schreiben. <br>
+          Diese Internetseite ist von Grund auf mit HTML, CSS und JS gebaut. Der Code ist in meinem GitHub-Repository einzusehen.
+        </div>
+
+        <p>
+          <a href="mailto:benedikt-lamberty@online.de"><i class="fa-solid fa-envelope"></i> benedikt-lamberty@online.de</a> <br>
+          <a href="https://github.com/MissionGruen/MissionGruen.github.io"><i class="fa-brands fa-github"></i> GitHub-Repository</a>
+        </p>
+      </div>
     </div>
 
     
-    <h2>Wer sind wir?</h2>
-    <p class="pers-info">
-      Wir sind eine Kinder- und Jugendgruppe im Pastoralen Raum Bad Neuenahr-Ahrweiler,
-      die sich für Natur- und Artenschutz einsetzt. Wenn Sie näheres über uns wissen wolle,
-      finden sie <a href="about.html">hier</a> mehr Informationen.
-    </p>
 
-    <h2>Aktuelle Veranstaltungen</h2>
-    <div class="preview-home-akt">
-      <div><img src="bilder/bild-platzhalter.png" alt=""></div>
-      <div>
-        <h3>Kräuterpfannkucken Backen mit Elisa</h3>
-        <div class="date">01.01.2050 &#183; 15:30 Uhr &#183; Auf dem Mond</div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
-        <button class="normal-button">
-          <i class="fa-solid fa-circle-info"></i> mehr Infos
-        </button>
-      </div>
-    </div>
-    <div class="preview-home-akt">
-      <div>
-        <h3>Vogelwanderung</h3>
-        <div class="date">02.02.2090 &#183; 15:30 Uhr &#183; Im Wald</div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
-        <button class="normal-button">
-          <i class="fa-solid fa-circle-info"></i> mehr Infos
-        </button>
-      </div>
-    </div>
-    <div class="preview-home-akt">
-      <div>
-        <button class="normal-button">
-          <i class="fa-solid fa-arrow-right-from-bracket"></i> Weitere Aktionen
-        </button>
-      </div>
-    </div>
+
   </main>
 
 
