--- a/berichte.html
+++ b/berichte.html
@@ -191,7 +191,7 @@
           Zusammenfassung Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
         </p>
         <div class="proj-link">
-          <a href="https://github.com/BenediktLamberty/BenediktLamberty.github.io" target="_blank">
+          <a class="externer-link-confirm" id="https://www.verbundenanderahr.de/">
             <button class="normal-button">
               <i class="fa-solid fa-arrow-up-right-from-square"></i> Verbunden an der Ahr
             </button>
@@ -215,7 +215,7 @@
           Zusammenfassung Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
         </p>
         <div class="proj-link">
-          <a href="https://github.com/BenediktLamberty/BenediktLamberty.github.io" target="_blank">
+          <a class="externer-link-confirm" id="https://github.com/BenediktLamberty/BenediktLamberty.github.io">
             <button class="normal-button">
               <i class="fa-brands fa-github"></i> Repository
             </button>
@@ -232,7 +232,7 @@
 
 
 
-
+  <script src="scripts/externerLink.js"></script>
 </body>
 </html>
  
