--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
       </div>
     </div>
     <div class="preview-home-akt">
-      <div>
+      <a href="aktuelles.html">
         <button class="normal-button">
           <i class="fa-solid fa-arrow-right-from-bracket"></i> Weitere Aktionen
         </button>
-      </div>
+      </a>
     </div>
   </main>
 
@@ -197,7 +197,7 @@
 
 
 
-
+  <script src="scripts/externerLink.js"></script>
 </body>
 </html>
  
