--- a/links.html
+++ b/links.html
@@ -148,7 +148,7 @@
   <main>
     <h1>Externe Links</h1>
 
-    <a href="https://www.nabu.de/" class="preview-home-akt">
+    <a id="https://www.nabu.de/" class="preview-home-akt externer-link-confirm">
       <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
       <div>
         <h3>NABU</h3>
@@ -157,7 +157,7 @@
       </div>
     </a>
 
-    <a href="https://www.pastoraler-raum-bad-neuenahr-ahrweiler.de/" class="preview-home-akt">
+    <a id="https://www.pastoraler-raum-bad-neuenahr-ahrweiler.de/" class="preview-home-akt externer-link-confirm">
       <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
       <div>
         <h3>Pastoraler Raum Bad Neuenahr-Ahrweiler</h3>
@@ -170,7 +170,7 @@
 
 
 
-
+  <script src="scripts/externerLink.js"></script>
 </body>
 </html>
  
