--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width	, initial-scale=1.0">
   <meta name="description" content="Dies ist meine erste Website">
-  <meta name="keywords" content="HTML, CSS, erste Website, Homepage">
+  <meta name="keywords" content="Mission Grün, Mission, Grün, Gruen, Ahrweiler, Bad-Neuenahr, Pius, Rosenkranz, 
+  Benedikt, Lamberty, Markus, Hartmann, Pastoraler Raum, Jugendarbeit, HTML, CSS, erste Website, Homepage">
   <meta name="author" content="Benedikt Lamberty">
   <title>Mission Grün</title>
 
