--- a/about.html
+++ b/about.html
@@ -150,10 +150,25 @@
 
     <img src="bilder/gruppenfoto-platzhalter.webp" alt="" class="about-foto1">
 
-    <h2>laksdjfklöjasdökljf</h2>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
-
-      Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,
+    <h2>Was wir so tun</h2>
+    <p>
+      <ul>
+        <li>Exkursionen in Feld und Wiese, oder zu anderen interessanten Höfen und einrichtungen,
+          um mehr über Flora und Fauna zu erfahren;
+        </li>
+        <li>
+          Filme, wie wir umweltgerecht im Alltag leben können;
+        </li>
+        <li>
+          Vernetzung mit andeten Partnern, die wir gut unterstützen: In diesem Jahr haben wir Fledermausquartiere in Kirchen gereinigt;
+        </li>
+        <li>
+          Wir retten Obst und machen daraus lauter Leckereien;
+        </li>
+        <li>
+          Und darüber hinaus treffen wir und einfach und spielen, planen, diskutieren...
+        </li>
+      </ul>
     </p>
   </main>
 
