--- a/index.html
+++ b/index.html
@@ -145,28 +145,43 @@
 <!--Main---------------------------------------------------------------------------------------------------->
 <!--Main---------------------------------------------------------------------------------------------------->
   <main>
-    <h1>Willkommen bei Mission Grün!</h1>
-
-    <div class="warning">
-      Diese Seite ist keine professionelle Internetseite, sondern nur ein kleines Projekt :&#41;
-    </div>
+    <h1>Willkommen bei mission grün!</h1>
 
     
     <h2>Wer sind wir?</h2>
     <p class="pers-info">
       Wir sind eine Kinder- und Jugendgruppe im Pastoralen Raum Bad Neuenahr-Ahrweiler,
-      die sich für Natur- und Artenschutz einsetzt. Wenn Sie näheres über uns wissen wolle,
-      finden sie <a href="about.html">hier</a> mehr Informationen.
+      die sich für Natur- und Artenschutz aus christlicher Überzeugung einsetzt. Wenn Sie Näheres über uns wissen wolle,
+      finden Sie <a href="about.html">hier</a> mehr Informationen.
     </p>
 
     <h2>Aktuelle Veranstaltungen</h2>
     <div class="preview-home-akt">
       <div><img src="bilder/bild-platzhalter.png" alt=""></div>
       <div>
-        <h3>Kräuterpfannkucken Backen mit Elisa</h3>
-        <div class="date">01.01.2050 &#183; 15:30 Uhr &#183; Auf dem Mond</div>
+        <h3>Waldquartier bauen</h3>
+        <div class="date">ab Mai</div>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          Wir sind stolze Waldbewohner <br>
+          In der Nähe von Bad Neuenahr-Ahrweiler richten wir uns ein großes Waldgrundstück her, 
+          um noch besser Wild und Pflanzen, den Sternenhimmel und das Gewusel unter unseren Füßen beobachten zu können. <br>
+          Treffen: immer freitags, 15:30, alle 14 Tage und nach Vereinbarung.
+          
+        </p>
+        <!--
+        <button class="normal-button">
+          <i class="fa-solid fa-circle-info"></i> mehr Infos
+        </button>-->
+      </div>
+    </div>
+    <div class="preview-home-akt">
+      <div>
+        <h3>Vogelkonzert-Gottesdienst</h3>
+        <div class="date">Pfingstmontag, 29. Mai &#183; 6:00 Uhr</div>
+        <p>
+          Mit den Vögeln einstimmen in ein Gotteslob? Und dabei erfahren, wer da zwischert? Das geht bei uns Hand in Hand. In aller Herrgottsfrühe 
+          genießen wir die Natur und enden bei einer gemeinsamen Brotfeier und mit einem deftigen Frühstück. So starten wir gut in die Pfingstwoche.
+          Ort wird noch bekannt gegeben. Fachliche Begleitung: Dr. Thomas Wagner, nabu
         </p>
         <button class="normal-button">
           <i class="fa-solid fa-circle-info"></i> mehr Infos
@@ -174,17 +189,24 @@
       </div>
     </div>
     <div class="preview-home-akt">
+      <div><img src="bilder/bild-platzhalter.png" alt=""></div>
       <div>
-        <h3>Vogelwanderung</h3>
-        <div class="date">02.02.2090 &#183; 15:30 Uhr &#183; Im Wald</div>
+        <h3>Obstretteraktion 2023</h3>
+        <div class="date">ab Juni</div>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          Wieviel Obst bleibt jedes Jahr hängen und würde gerne in Marmeladengläsern, Saftflaschen oder Kompotttöpfen landen? 
+          Wir kümmern uns darum - pflücken, kochen ein, pressen, naschen... Erdbeeren, Äpfel, u.v.m. 
+          In diesem Jahr laufen wir uns warm mit wenigen Aktionen und einigen Partnern - im kommenden Jahr werden wir die Obstretteraktion noch größer aufziehen.
+          Interesse mitzumachen? Einfach melden.
         </p>
-        <button class="normal-button">
-          <i class="fa-solid fa-circle-info"></i> mehr Infos
-        </button>
+        <a href="kontakt.html">
+          <button class="normal-button">
+            <i class="fa-solid fa-circle-info"></i> Kontakt
+          </button>
+        </a>
       </div>
     </div>
+    <!--
     <div class="preview-home-akt">
       <a href="aktuelles.html">
         <button class="normal-button">
@@ -192,6 +214,7 @@
         </button>
       </a>
     </div>
+  -->
   </main>
 
 
