--- a/kontakt.html
+++ b/kontakt.html
@@ -157,8 +157,8 @@
         <h3>Markus Hartmann</h3>
 
         <p>
-          Graf-Blankerd-Straße 12-22 </br>
-          53501 Grafschaft </br>
+          Graf-Blankard-Straße 12-22 </br>
+          53501 Grafschaft - Lanteshofen </br>
           Tel. 0171-1827107 </br>
           <a href="mailto:markus.hartmann@bistum-trier.de"><i class="fa-solid fa-envelope"></i> markus.hartmann@bistum-trier.de</a>
         </p>
