--- a/links.html
+++ b/links.html
@@ -161,7 +161,9 @@
       <div class="link-pic"><img src="bilder/bild-platzhalter.png" alt=""></div>
       <div>
         <h3>Pastoraler Raum Bad Neuenahr-Ahrweiler</h3>
-        <p>ölkasjdflökjasdklöj</p>
+        <p>Umfasst die Pfarreien / Pfarreiengemeinschaften Bad Neuenahr-Ahrweiler,
+          Altenahr, Grafschaft
+        </p>
       </div>
     </a>
   </main>
