--- a/projekte.html
+++ b/projekte.html
@@ -157,6 +157,7 @@
           <iframe width="560" height="315" src="https://www.youtube.com/embed/g4FovhkD6f0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <h2 class="proj-title">Video-Projekt 1</h2>
+        <!--
         <div class="proj-author-date">
           <div class="proj-side-info">Benedikt Lamberty</div>
           <div class="proj-side-info">April 2023</div>
@@ -166,8 +167,10 @@
           <nobr class="proj-tag"><span class="tag-fauna"><i class="fa-solid fa-circle"></i></span> Fauna</nobr>
           <nobr class="proj-tag"><span class="tag-artenschutz"><i class="fa-solid fa-circle"></i></span> Artenschutz</nobr>
         </div>
+        -->
         <p class="proj-abstract">
-          Zusammenfassung Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          Wir stellen uns vor für den Umweltpreis des Bistums Trier 2021, für den wir großzügig
+          bedacht wurden.
         </p>
         <div class="proj-link">
           <a class="externer-link-confirm" id="https://www.youtube.com/watch?v=g4FovhkD6f0">
@@ -177,7 +180,7 @@
           </a>
         </div>
       </div>
-
+<!--
       <div class="project-block">
         <img class="proj-thumbnail" src="bilder/bild-platzhalter.png" alt="">
         <h2 class="proj-title">Artikel 1</h2>
@@ -201,6 +204,7 @@
           </a>
         </div>
       </div>
+    -->
 
     </div>
   </main>
